# ai-workbench

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  workbench.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-site.yml  runtimes.yml  secret-scan.yml  smoke-astra.yml
apps/web/: .env.example  .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.e2e.json  vite.config.ts  vitest.config.ts
clients/: README.md
clients/conformance/: README.md  normalize.mjs  runner.mjs  scenarios.json  scenarios.md
clients/python/: .gitignore  README.md  pyproject.toml
clients/python-runtime/: README.md
clients/python/src/workbench_astra_client/: __init__.py  _http.py  client.py  control_plane.py  data_plane.py  types.py
clients/python/tests/: conftest.py  test_conformance.py
conformance/: README.md  normalize.mjs  runner.mjs  scenarios.json  scenarios.md
conformance/fixtures/: agent-crud-basic.json  catalog-async-ingest-202.json  catalog-ingest-basic.json  catalog-saved-queries.json  catalog-scoped-document-search.json  catalog-under-workspace.json  catalog-vector-store-reference-integrity.json  document-crud-basic.json  kb-document-crud-basic.json  kb-search-empty.json  knowledge-base-crud-basic.json  vector-store-definition.json  vector-store-hybrid-and-rerank-mock.json  vector-store-text-dispatch-mock.json  vector-store-upsert-and-search.json  workspace-api-key-lifecycle.json  workspace-credentials-must-be-secret-ref.json  workspace-crud-basic.json  workspace-kind-is-immutable.json  workspace-test-connection-mock.json
conformance/mock-astra/: server.ts
docs/: README.md  agents.md  api-spec.md  architecture.md  astra-cli.md  audit.md  auth.md  chat.md  configuration.md  conformance.md  cross-replica-jobs.md  green-boxes.md  mcp.md  overview.md  playground.md  production.md  roadmap.md  route-plugins.md  workspaces.md
docs/examples/: workbench.yaml
examples/: workbench.yaml
runtimes/: README.md
runtimes/java/: .gitignore  README.md  SCHEMA_NOTES.md  build.gradle.kts  settings.gradle.kts
runtimes/python/: README.md  SCHEMA_NOTES.md  pyproject.toml
runtimes/python/src/workbench/: __init__.py  app.py  cli.py  config.py  errors.py  models.py
runtimes/python/src/workbench/routes/: catalogs.py  kb_data_plane.py  kb_documents.py  knowledge_bases.py  knowledge_filters.py  services.py  vector_stores.py
runtimes/python/tests/: conftest.py  test_conformance.py  test_operational.py
runtimes/typescript/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: check-api-error-helper.mjs  conformance-regenerate.ts  secret-scan.mjs
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
site/.vitepress/: config.ts
site/scripts/: stage-docs.mjs
site/src/: content.config.ts
src/: app.ts  root.ts  version.ts
src/astra-client/: row-types.ts  table-definitions.ts
src/config/: interpolate.ts  loader.ts  schema.ts
src/control-plane/: errors.ts
src/drivers/: factory.ts  registry.ts  vector-store.ts
src/lib/: auth.ts  errors.ts  logger.ts  redact.ts  (+2 more)
tests/: app.test.ts  config.test.ts  interpolate.test.ts
(+459 files in other folders)
